# rds

./: Cargo.toml  README.md
src/: main.rs  spotdl.rs
src/commands/: deafen.rs  join.rs  leave.rs  mod.rs  mute.rs  queue.rs  repeat.rs  skip.rs  stop.rs  undeafen.rs  unmute.rs
