[package]
name = "rds"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.11", features = ["cache", "framework", "standard_framework", "voice", "http", "rustls_backend"]}
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "signal", "sync"] }
clap= {version= "4.5.21", features= ["derive"]}
lazy_static = "1.4.0"
dotenvy = "0.15.7"
tracing = "0.1"
tracing-subscriber = "0.3"
term_ansi = "0.2.5"
songbird = { version = "0.3.2", features = ["yt-dlp", "builtin-queue", "serenity"] }
env_logger = "0.10"
log = "0.4"