[package]
name = "rds"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12", features = ["cache", "framework", "standard_framework", "voice", "http", "rustls_backend"]}
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = "0.3"
songbird = { version = "0.4", default-features = true, features = ["builtin-queue"] }
symphonia = { features = ["aac", "mp3", "isomp4", "alac"], version = "0.5.2" }
reqwest = "0.11"
tracing-futures = "0.2"
regex = "1.11.1"